--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta name="theme-color" content={theme.palette.primary.main} />
+    <meta name="theme-color" content="#2A2A2A" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon.png" />
@@ -24,6 +24,6 @@
 
 <body>
 
-<script src="/static/main.7381963717c257ce3dac.js"></script><script src="/static/sentry.7381963717c257ce3dac.js"></script></body>
+<script src="/static/main.502ac89d96b057355e2f.js"></script><script src="/static/sentry.502ac89d96b057355e2f.js"></script></body>
 
 </html>
