Add meta viewport tag

--- a/html/base.html
+++ b/html/base.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Roboto&display=swap" rel="stylesheet" />
     <script data-ad-client="ca-pub-5743230176334128" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
