--- a/html/base.html
+++ b/html/base.html
@@ -7,12 +7,12 @@
     <script data-ad-client="ca-pub-5743230176334128" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charSet="utf-8" />
-    <title>Free online development tools | Sudo&#x27;s Tools</title>
+    <title>Free online tools for developers | Sudo&#x27;s Tools</title>
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta property="og:url" content="https://sudos.tools/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Free online development tools | Sudo&#x27;s Tools" />
+    <meta property="og:title" content="Free online tools for developers | Sudo&#x27;s Tools" />
     <meta property="og:locale" content="en_IE" />
     <meta property="og:site_name" content="Sudo&#x27;s Tools" />
 </head>
