Work on app theme and styles

--- a/html/base.html
+++ b/html/base.html
@@ -15,6 +15,7 @@
     <meta property="og:title" content="Free online tools for developers | Sudo&#x27;s Tools" />
     <meta property="og:locale" content="en_IE" />
     <meta property="og:site_name" content="Sudo&#x27;s Tools" />
+    <!-- jss-insertion-point -->
 </head>
 
 <body>
